--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -1,3 +1,15 @@
-body {
-  background: #000;
-}
+@import './base/reset';
+@import './base/variables';
+@import './base/mixins';
+@import './base/functions';
+@import './base/typography';
+
+/**
+* Components
+**/
+@import './components/button';
+
+/**
+* Modules
+**/
+@import './modules/widget-container';
