--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -1,3 +1,41 @@
 .header {
+  height: 55px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  &--hidden-logo &__logo {
+    display: none;
+  }
+
+  &__logo {
+
+    svg {
+      width: 75px;
+    }
+  }
+
+  &__help {
+    background: transparent;
+    text-decoration: underline;
+    padding: 0;
+    border: none;
+    font-size: rem(15px);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 20px;
+    font-weight: 300;
+  }
+
+  &__close {
+    background: transparent;
+    padding: 5px;
+    border: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 12px;
+  }
 }
