--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -1,4 +1,5 @@
 @import './base/reset';
+@import './base/general';
 @import './base/variables';
 @import './base/mixins';
 @import './base/functions';
@@ -13,3 +14,4 @@
 * Modules
 **/
 @import './modules/widget-container';
+@import './modules/header';
