--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -1,3 +1,6 @@
+/**
+ * Base
+ */
 @import './base/reset';
 @import './base/general';
 @import './base/variables';
@@ -6,12 +9,14 @@
 @import './base/typography';
 
 /**
-* Components
-**/
+ * Components
+ */
 @import './components/button';
 
 /**
-* Modules
-**/
+ * Modules
+ */
 @import './modules/widget-container';
 @import './modules/header';
+@import './modules/screen';
+@import './modules/welcome';
