add default font-weight = 300

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,4 +2,5 @@ body {
   font-family: 'Roboto', 'Open Sans', Arial, sans-serif;
   font-size: $base-font-size;
   line-height: rem($base-line-height);
+  font-weight: 300;
 }
