add tips and slider modules

--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -20,3 +20,5 @@
 @import './modules/header';
 @import './modules/screen';
 @import './modules/welcome';
+@import './modules/slider';
+@import './modules/tips';
