--- a/src/views/widget.html
+++ b/src/views/widget.html
@@ -44,8 +44,8 @@
     <!-- TIPS SCREEN - START -->
     <div class="screen screen--tips active" data-screen="2">
       <div class="screen__content tips">
-        <h2 class="tips__title">Hi, here are some tips</h2>
-        <p class="tips__text">Simply take two photos with any smartphone<br>camera. You can be on any background.</p>
+        <h2 class="screen__title">Hi, here are some tips</h2>
+        <p class="screen__text">Simply take two photos with any smartphone<br>camera. You can be on any background.</p>
         <div class="tips__slider slider">
           <div class="slider__slides">
             <div class="slider__slide active">
@@ -69,7 +69,7 @@
 
           <div class="slider__nav">
             <button class="slider__back-btn">
-                <img src="../images/slider-next-icon.svg" alt="Prev slide button icon">
+              <img src="../images/slider-next-icon.svg" alt="Prev slide button icon">
             </button>
             <button class="slider__next-btn">
               <img src="../images/slider-next-icon.svg" alt="Next slide button icon">
