add data screen

--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -12,6 +12,7 @@
  * Components
  */
 @import './components/button';
+@import './components/checkbox';
 
 /**
  * Modules
@@ -23,3 +24,6 @@
 @import './modules/slider';
 @import './modules/tips';
 @import './modules/upload';
+@import './modules/data';
+@import './modules/gender';
+@import './modules/height';
