--- a/src/views/widget.html
+++ b/src/views/widget.html
@@ -166,7 +166,7 @@
     <!-- UPLOAD SCREEN - END -->
 
     <!-- DATA SCREEN - START -->
-    <div class="screen screen--data active" data-screen="4">
+    <div class="screen screen--data" data-screen="4">
       <div class="screen__content data">
         <h2 class="screen__title">And the last step</h2>
         <p class="screen__text">Please select your gender and enter height. <br>
@@ -238,6 +238,15 @@
       </div>
     </div>
     <!-- DATA SCREEN - END -->
+
+    <!-- PRELOADER SCREEN - START -->
+    <div class="screen screen--preloader active" data-screen="5">
+      <div class="screen__content preloader">
+        <h2 class="preloader__title screen__title">We’re doing some magic…<br>Please stand by</h2>
+        <img class="preloader__image" src="../images/preloader.svg" alt="Preloader image">
+      </div>
+    </div>
+    <!-- PRELOADER SCREEN - END -->
   </div>
 </body>
 </html>
