fix button class for link element

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -11,6 +11,8 @@
   font-weight: 700;
   border: none;
   cursor: pointer;
+  text-decoration: none;
+  line-height: 60px;
 
   &__icon {
     display: inline-block;
