fix height component after element pointer events

--- a/src/scss/modules/_height.scss
+++ b/src/scss/modules/_height.scss
@@ -28,6 +28,7 @@
       color: #9B9B9B;
       text-transform: uppercase;
       transform: translateY(-50%);
+      pointer-events: none;
     }
   }
 
