--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -15,9 +15,17 @@
   cursor: pointer;
   text-decoration: none;
   line-height: 60px;
+  transition: all ease 300ms;
 
   &__icon {
     display: inline-block;
     margin-left: 4px;
+  }
+
+  &[disabled],
+  &--disabled {
+    box-shadow: none;
+    opacity: 0.7;
+    pointer-events: none;
   }
 }
