--- a/src/scss/modules/_gender.scss
+++ b/src/scss/modules/_gender.scss
@@ -6,6 +6,11 @@
     @include visually-hidden();
   }
 
+  &--invalid &__item {
+    border-color: $error-border-color;
+    background-color: $error-background-color;
+  }
+
   &__item {
     height: 50px;
     border: 1px solid #000000;
