--- a/src/scss/modules/_height.scss
+++ b/src/scss/modules/_height.scss
@@ -8,6 +8,11 @@
     display: flex;
   }
 
+  &--invalid &__input {
+    border-color: $error-border-color;
+    background-color: $error-background-color;
+  }
+
   &__measure  {
     display: none;
   }
@@ -113,5 +118,9 @@
     text-align: center;
     color: #9B9B9B;
     margin-top: 29px;
+
+    &--hidden {
+      display: none;
+    }
   }
 }
