--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,5 +2,6 @@ $base-font-size: 14px;
 $base-line-height: 19px;
 
 
+$error-text-color: #D0021B;
 $error-border-color: #D0021B;
 $error-background-color: #FFE8E8;
