update Upload component

--- a/src/scss/modules/_upload.scss
+++ b/src/scss/modules/_upload.scss
@@ -28,8 +28,9 @@
     border-radius: 3px;
     cursor: pointer;
 
-    &--error {
-      border-color: red;
+    &--invalid {
+      border-color: $error-border-color;
+      background: $error-background-color;
     }
   }
 
