--- a/src/scss/components/_checkbox.scss
+++ b/src/scss/components/_checkbox.scss
@@ -22,6 +22,7 @@
       border-radius: 1px;
       box-shadow: 0 2px 12px 0 rgba(0,0,0,0.1);
       margin-right: 7px;
+      cursor: pointer;
     }
 
     &:after {
