--- a/src/scss/modules/_result.scss
+++ b/src/scss/modules/_result.scss
@@ -48,18 +48,29 @@
   &__sizes {
     display: flex;
     justify-content: center;
+    margin: 0 auto;
     margin-bottom: 46px;
+    max-width: 285px;
+    position: relative;
   }
 
   &__size {
-    margin-top: 23px;
+    top: 23px;
+    position: absolute;
+    left: 0;
+    display: none;
 
-    &--big {
-      margin: 0 26px;
-      margin-top: 0;
+    &.active {
+      display: block;
     }
 
-    &--big &-num {
+    &--normal {
+      margin: 0 26px;
+      margin-top: 0;
+      position: static;
+    }
+
+    &--normal &-num {
       background: #000;
       color: #fff;
       height: 95px;
@@ -69,8 +80,13 @@
       margin-bottom: 13px;
     }
 
-    &--big &-desc {
+    &--normal &-desc {
       font-size: rem(12px);
+    }
+
+    &--loose {
+      right: 0;
+      left: auto;
     }
   }
 
