--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,3 +1,41 @@
-body {
-  background-attachment: fixed;
+.saia-pf {
+
+  &-button {
+    background: #000;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+  }
+
+  &-modal {
+  }
+
+  &-drop {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1001;
+    justify-content: center;
+    align-items: center;
+    display: none;
+
+    &.active {
+      display: flex;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &-drop__container {
+    max-width: 600px;
+    width: 100%;
+    height: 700px;
+    background: #fff;
+  }
 }
