--- a/src/scss/modules/_result.scss
+++ b/src/scss/modules/_result.scss
@@ -4,6 +4,11 @@
 
   &__title {
     margin-bottom: 24px;
+    display: none;
+
+    &.active {
+      display: block;
+    }
   }
 
   &__text {
@@ -110,5 +115,14 @@
 
   &__size-desc {
     font-size: rem(11px);
+  }
+
+  &__size-not-found {
+    display: none;
+    margin-bottom: 80px;
+
+    &.active {
+      display: block;
+    }
   }
 }
