--- a/src/scss/modules/_result.scss
+++ b/src/scss/modules/_result.scss
@@ -124,5 +124,10 @@
     &.active {
       display: block;
     }
+
+    h2 {
+      font-size: rem(16px);
+      margin-bottom: 30px;
+    }
   }
 }
