--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,10 +1,50 @@
 .saia-pf {
 
   &-button {
-    background: #000;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+    font-weight: 900;
+    line-height: 20px;
     color: #fff;
     padding: 10px 15px;
     border: none;
+    height: 60px;
+    width: 240px;
+    border-radius: 30px;
+    box-sizing: border-box;
+    cursor: pointer;
+
+    &--default {
+      background: linear-gradient(270deg, #2ABCFA 0%, #A535B6 100%);
+      box-shadow: 0 4px 13px 0 rgba(0,0,0,0.34);
+
+      svg {
+        fill: #fff;
+      }
+    }
+
+    &--black {
+      background: #000;
+      box-shadow: 0 4px 13px 0 rgba(0,0,0,0.34);
+    }
+
+    &--outline {
+      border: 2px solid #000;
+      background: transparent;
+      color: #000;
+
+      svg {
+        fill: #000;
+      }
+    }
+
+    svg {
+      display: inline-block;
+      margin-right: 5px;
+      vertical-align: middle;
+    }
   }
 
   &-modal {
