--- a/src/scss/modules/_screen.scss
+++ b/src/scss/modules/_screen.scss
@@ -4,6 +4,10 @@
   width: 100%;
   margin: 0 auto;
 
+  @include breakpoint(max-width 500px) {
+    padding: 20px !important;
+  }
+
   &--welcome {
     padding-bottom: 64px;
   }
