--- a/src/scss/modules/_welcome.scss
+++ b/src/scss/modules/_welcome.scss
@@ -4,12 +4,20 @@
   flex-direction: column;
   text-align: center;
 
+  @include breakpoint(max-width 768px) {
+    padding-bottom: 55px;
+  }
+
   &__logo {
-    width: 240px;
     margin-bottom: 36px;
 
     img {
       width: 240px;
+
+      @include breakpoint(max-width 500px) {
+        width: 140px;
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -18,10 +26,19 @@
     font-weight: 300;
     margin-top: 20px;
     letter-spacing: 1.6px;
+
+    @include breakpoint(max-width 500px) {
+      font-size: rem(8px);
+      margin-top: 10px;
+    }
   }
 
   &__text {
     margin-bottom: 67px;
     line-height: rem(21px);
+
+    @include breakpoint(max-width 500px) {
+      margin-bottom: 30px;
+    }
   }
 }
