--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -3,4 +3,8 @@ body {
   font-size: $base-font-size;
   line-height: rem($base-line-height);
   font-weight: 300;
+
+  @include breakpoint(max-width 500px) {
+    font-size: $base-font-size--sm;
+  }
 }
