--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -17,9 +17,19 @@
   line-height: 60px;
   transition: all ease 300ms;
 
+  @include breakpoint(max-width 500px) {
+    height: 50px;
+    width: 200px;
+    line-height: 50px;
+  }
+
   &__icon {
     display: inline-block;
     margin-left: 4px;
+
+    @include breakpoint(max-width 500px) {
+      width: 20px;
+    }
   }
 
   &[disabled],
