--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -27,6 +27,10 @@
     transform: translateY(-50%);
     left: 20px;
     font-weight: 300;
+
+    @include breakpoint(max-width 500px) {
+      font-size: rem(12px);
+    }
   }
 
   &__close {
