--- a/src/scss/modules/_height.scss
+++ b/src/scss/modules/_height.scss
@@ -46,6 +46,11 @@
     font-size: 1rem;
     font-weight: bold;
     padding: 0 15px;
+    appearance: none;
+
+    @include breakpoint(max-width 500px) {
+      height: 40px;
+    }
   }
 
   &__switcher {
@@ -118,6 +123,10 @@
     text-align: center;
     color: #9B9B9B;
     margin-top: 29px;
+
+    @include breakpoint(max-width 500px) {
+      margin-top: 15px;
+    }
 
     &--hidden {
       display: none;
