--- a/src/scss/modules/_preloader.scss
+++ b/src/scss/modules/_preloader.scss
@@ -22,6 +22,10 @@
   &__image {
     margin: 0 auto;
     animation: spin 3s linear infinite;
+
+    @include breakpoint(max-width 500px) {
+      max-width: 65px;
+    }
   }
 }
 
