--- a/src/scss/modules/_result.scss
+++ b/src/scss/modules/_result.scss
@@ -18,6 +18,10 @@
     padding: 27px 0;
     margin-bottom: 29px;
 
+    @include breakpoint(max-width 500px) {
+      padding: 15px 0;
+    }
+
     b {
       font-weight: bold;
     }
@@ -37,6 +41,13 @@
 
   &__product-img {
     margin-right: 23px;
+
+    img {
+      width: 66px;
+      height: 66px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
   }
 
   &__product-info {
@@ -61,6 +72,10 @@
     margin-bottom: 46px;
     max-width: 285px;
     position: relative;
+
+    @include breakpoint(max-width 500px) {
+      margin-bottom: 30px;
+    }
   }
 
   &__size {
@@ -87,6 +102,12 @@
       box-shadow: 0 4px 13px 0 rgba(0,0,0,0.17);
       font-size: rem(46px);
       margin-bottom: 13px;
+
+      @include breakpoint(max-width 500px) {
+        height: 80px;
+        width: 90px;
+        font-size: rem(36px);
+      }
     }
 
     &--normal &-desc {
@@ -111,6 +132,12 @@
     text-transform: uppercase;
     font-size: rem(18px);
     margin-bottom: 6px;
+
+    @include breakpoint(max-width 500px) {
+      height: 45px;
+      width: 55px;
+      font-size: rem(14px);
+    }
   }
 
   &__size-desc {
