--- a/src/scss/modules/_upload.scss
+++ b/src/scss/modules/_upload.scss
@@ -3,15 +3,33 @@
   text-align: center;
   padding-top: 6px;
 
+  @include breakpoint(max-width 500px) {
+    .screen__text {
+      margin-bottom: 0;
+    }
+  }
+
   &__files {
     display: flex;
     justify-content: space-between;
     margin-top: 38px;
     position: relative;
+
+    @include breakpoint(max-width 500px) {
+      margin-top: 20px;
+    }
   }
 
   &__file-block {
+    @include breakpoint(max-width 500px) {
+      width: 100%;
+    }
 
+    &:first-child {
+      @include breakpoint(max-width 500px) {
+        margin-right: 10px;
+      }
+    }
   }
 
   &__file-title {
@@ -28,6 +46,11 @@
     border: 1px solid #000000;
     border-radius: 3px;
     cursor: pointer;
+
+    @include breakpoint(max-width 500px) {
+      width: 100%;
+      height: 200px;
+    }
 
     &--invalid {
       border-color: $error-border-color;
@@ -53,7 +76,11 @@
       align-items: center;
     }
 
-    &--placeholder {
+    &--placeholder img {
+
+      @include breakpoint(max-width 500px) {
+        height: 115px;
+      }
     }
 
     &--preview img {
@@ -76,6 +103,13 @@
     font-size: rem(11px);
     margin-top: 16px;
     margin-left: 36px;
+    opacity: 0;
+    visibility: hidden;
+
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
   }
 
   &__file-validation-icon {
@@ -140,6 +174,7 @@
 
   &__files-error {
     @extend .data__field-error;
+    width: 100%;
 
     &.active {
       display: block;
