--- a/src/scss/modules/_widget-container.scss
+++ b/src/scss/modules/_widget-container.scss
@@ -5,4 +5,10 @@
   display: flex;
   flex-direction: column;
   position: relative;
+
+  @include breakpoint(max-width 768px) {
+    max-width: 100%;
+    width: 100vw;
+    height: auto;
+  }
 }
