disable default number arrow buttons

--- a/src/scss/modules/_height.scss
+++ b/src/scss/modules/_height.scss
@@ -48,6 +48,8 @@
     padding: 0 15px;
     appearance: none;
 
+    @include disable-number();
+
     @include breakpoint(max-width 500px) {
       height: 40px;
     }
