--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -41,3 +41,14 @@
   outline: 0;
   appearance: none;
 }
+
+@mixin disable-number {
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  
+  & {
+    -moz-appearance: textfield;
+  }
+}
