--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,3 +1,5 @@
+@import '~breakpoint-sass';
+
 .saia-pf {
 
   &-button {
@@ -75,7 +77,13 @@
   &-drop__container {
     max-width: 600px;
     width: 100%;
-    height: 700px;
+    max-height: 700px;
+    height: 100%;
     background: #fff;
+
+    @include breakpoint(max-width 768px) {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 }
