add saia button margins

--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -17,6 +17,7 @@
     border-radius: 30px;
     box-sizing: border-box;
     cursor: pointer;
+    margin: 20px 0;
 
     &--default {
       background: linear-gradient(270deg, #2ABCFA 0%, #A535B6 100%);
