--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -14,10 +14,10 @@
     font-weight: 900;
     line-height: 20px;
     color: #fff;
-    padding: 0;
+    padding: 0 10px;
     border: none;
     height: 40px;
-    width: 160px;
+    min-width: 160px;
     border-radius: 30px;
     box-sizing: border-box;
     cursor: pointer;
