--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -4,7 +4,7 @@ body {
   line-height: rem($base-line-height);
   font-weight: 300;
 
-  @include breakpoint(max-width 500px) {
+  @include breakpoint((max-width 500px, max-height 650px)) {
     font-size: $base-font-size--sm;
   }
 }
