--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -17,7 +17,7 @@
   line-height: 60px;
   transition: all ease 300ms;
 
-  @include breakpoint(max-width 500px) {
+  @include breakpoint((max-width 500px, max-height 650px)) {
     height: 50px;
     width: 200px;
     line-height: 50px;
@@ -27,7 +27,7 @@
     display: inline-block;
     margin-left: 4px;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       width: 20px;
     }
   }
