--- a/src/scss/modules/_result.scss
+++ b/src/scss/modules/_result.scss
@@ -18,7 +18,7 @@
     padding: 27px 0;
     margin-bottom: 29px;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       padding: 15px 0;
     }
 
@@ -73,7 +73,7 @@
     max-width: 285px;
     position: relative;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       margin-bottom: 30px;
     }
   }
@@ -103,7 +103,7 @@
       font-size: rem(46px);
       margin-bottom: 13px;
 
-      @include breakpoint(max-width 500px) {
+      @include breakpoint((max-width 500px, max-height 650px)) {
         height: 80px;
         width: 90px;
         font-size: rem(36px);
@@ -133,7 +133,7 @@
     font-size: rem(18px);
     margin-bottom: 6px;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       height: 45px;
       width: 55px;
       font-size: rem(14px);
