--- a/src/scss/modules/_slider.scss
+++ b/src/scss/modules/_slider.scss
@@ -1,12 +1,12 @@
 .slider {
-  @include breakpoint(max-width 500px) {
+  @include breakpoint((max-width 500px, max-height 650px)) {
     position: relative;
   }
 
   &__slide {
     display: none;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       padding: 0 20px;
     }
 
@@ -25,7 +25,7 @@
     justify-content: center;
     margin: 30px 0 27px;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       margin: 15px 0;
     }
   }
@@ -66,7 +66,7 @@
   &__next-btn {
     right: 47px;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       right: -12px;
     }
   }
@@ -75,7 +75,7 @@
     left: 47px;
     transform: scaleX(-1) translateY(-50%);
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       left: -12px;
     }
   }
