--- a/src/scss/modules/_upload.scss
+++ b/src/scss/modules/_upload.scss
@@ -3,7 +3,7 @@
   text-align: center;
   padding-top: 6px;
 
-  @include breakpoint(max-width 500px) {
+  @include breakpoint((max-width 500px, max-height 650px)) {
     .screen__text {
       margin-bottom: 0;
     }
@@ -15,18 +15,18 @@
     margin-top: 38px;
     position: relative;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       margin-top: 20px;
     }
   }
 
   &__file-block {
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       width: 100%;
     }
 
     &:first-child {
-      @include breakpoint(max-width 500px) {
+      @include breakpoint((max-width 500px, max-height 650px)) {
         margin-right: 10px;
       }
     }
@@ -47,7 +47,7 @@
     border-radius: 3px;
     cursor: pointer;
 
-    @include breakpoint(max-width 500px) {
+    @include breakpoint((max-width 500px, max-height 650px)) {
       width: 100%;
       height: 200px;
     }
@@ -78,7 +78,7 @@
 
     &--placeholder img {
 
-      @include breakpoint(max-width 500px) {
+      @include breakpoint((max-width 500px, max-height 650px)) {
         height: 115px;
       }
     }
@@ -123,7 +123,7 @@
     transition: all ease 300ms;
 
     &--valid {
-      
+
     }
 
     &--invalid {
