--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -65,7 +65,7 @@
     left: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.8);
-    z-index: 1001;
+    z-index: 99999999;
     justify-content: center;
     align-items: center;
     display: none;
