--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -7,4 +7,8 @@ body {
   @include breakpoint((max-width 500px, max-height 650px)) {
     font-size: $base-font-size--sm;
   }
+
+  @include breakpoint((max-width 320px, max-height 568px)) {
+    font-size: $base-font-size--xsm;
+  }
 }
