--- a/src/scss/modules/_gender.scss
+++ b/src/scss/modules/_gender.scss
@@ -29,6 +29,11 @@
     @include breakpoint((max-width 500px, max-height 650px)) {
       height: 40px;
     }
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      height: 30px;
+      font-size: 0.8rem;
+    }
   }
 
   input:checked + label {
