--- a/src/scss/modules/_height.scss
+++ b/src/scss/modules/_height.scss
@@ -53,6 +53,11 @@
     @include breakpoint((max-width 500px, max-height 650px)) {
       height: 40px;
     }
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      height: 30px;
+      font-size: 0.8rem;
+    }
   }
 
   &__switcher {
@@ -81,6 +86,10 @@
     input[value="in"]:checked ~ .height__switcher-switch:before {
       left: 29px;
       display: block;
+
+      @include breakpoint((max-width 320px, max-height 568px)) {
+        left: 17px;
+      }
     }
   }
 
@@ -91,6 +100,11 @@
     width: 40px;
     text-align: center;
     cursor: pointer;
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      font-size: rem(11px);
+      width: 30px;
+    }
 
     &--cm {
       order: 1;
@@ -110,6 +124,11 @@
     position: relative;
     cursor: pointer;
 
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      height: 20px;
+      width: 35px;
+    }
+
     &:before {
       content: '';
       display: none;
@@ -120,6 +139,11 @@
       position: absolute;
       top: 3px;
       transition: all ease 300ms;
+
+      @include breakpoint((max-width 320px, max-height 568px)) {
+        height: 12px;
+        width: 12px;
+      }
     }
   }
 
@@ -130,6 +154,11 @@
 
     @include breakpoint((max-width 500px, max-height 650px)) {
       margin-top: 15px;
+    }
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      line-height: 16px;
+      margin-top: 10px;
     }
 
     &--hidden {
