--- a/src/scss/modules/_slider.scss
+++ b/src/scss/modules/_slider.scss
@@ -28,6 +28,10 @@
     @include breakpoint((max-width 500px, max-height 650px)) {
       margin: 15px 0;
     }
+
+    @include breakpoint((max-width 320px, max-height 568px)) {
+      margin: 10px 0;
+    }
   }
 
   &__bullet {
