--- a/src/scss/modules/_screen.scss
+++ b/src/scss/modules/_screen.scss
@@ -4,21 +4,14 @@
   width: 100%;
   margin: 0 auto;
 
-  @include breakpoint((max-width 500px, max-height 650px)) {
-    padding: 20px !important;
-  }
-
-  &--welcome {
-    padding-bottom: 64px;
-  }
-
-  &--tips {
-    padding-top: 7px;
-  }
-
   &__content {
-    margin: auto;
+    margin: 0 auto;
     width: 100%;
+  }
+
+  &__footer {
+    margin-top: auto;
+    padding-bottom: 40px;
   }
 
   &__title {
@@ -34,6 +27,7 @@
 
   &.active {
     display: flex;
+    flex-direction: column;
     flex-grow: 1;
   }
 }
