--- a/src/scss/modules/_welcome.scss
+++ b/src/scss/modules/_welcome.scss
@@ -1,40 +1,19 @@
 .welcome {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
 
-  &__logo {
-    margin-bottom: 36px;
+  &__slider {
+    margin-top: 99px;
 
-    img {
-      width: 240px;
-
-      @include breakpoint((max-width 500px, max-height 650px)) {
-        width: 140px;
-        margin-bottom: 20px;
-      }
+    .slider__slide img {
+      height: 284px;
     }
   }
 
-  &__powered {
-    font-size: rem(10px);
-    font-weight: 300;
-    margin-top: 20px;
-    letter-spacing: 1.6px;
-
-    @include breakpoint((max-width 500px, max-height 650px)) {
-      font-size: rem(8px);
-      margin-top: 10px;
-    }
-  }
-
-  &__text {
-    margin-bottom: 67px;
-    line-height: rem(21px);
-
-    @include breakpoint((max-width 500px, max-height 650px)) {
-      margin-bottom: 30px;
-    }
+  &__slider-text {
+    text-align: center;
+    height: 42px;
+    font-size: rem(16px);
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-top: 31px;
   }
 }
