--- a/src/scss/modules/_help.scss
+++ b/src/scss/modules/_help.scss
@@ -1,12 +1,11 @@
 .help {
   display: none;
   position: absolute;
-  top: 0;
+  top: 55px;
   right: 0;
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
   background: #fff;
   flex-direction: column;
   z-index: 9;
@@ -15,39 +14,37 @@
     display: flex;
   }
 
-  &__header {
-    @extend .header;
-    flex-shrink: 0;
-  }
+  &__footer {
+    @extend .screen__footer;
+    padding-top: 40px;
+    position: relative;
 
-  &__logo {
-    text-transform: uppercase;
-    font-size: rem(16px);
-  }
-
-  &__close {
-    @extend .header__close;
-
-    right: auto;
-    left: 12px;
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 100%;
+      left: 0;
+      right: 0;
+      height: 50px;
+      background: linear-gradient(180deg, rgba(255,255,255,0) 0%, #FFFFFF 100%);
+      pointer-events: none;
+    }
   }
 
   &__content {
-    padding: 28px;
+    padding: 24px 40px 0 40px;
     overflow: auto;
     flex-grow: 1;
 
-    @include breakpoint((max-width 500px, max-height 650px)) {
-      padding: 20px;
-    }
-
     h2 {
-      font-size: rem(13px);
-      margin-bottom: 15px;
+      font-size: rem(15px);
+      margin-bottom: 17px;
+      text-transform: uppercase;
     }
 
     p {
-      margin-bottom: 15px;
+      margin-bottom: 40px;
     }
   }
 }
